exports[`<Sidebar /> renders children correctly 1`] = `
<aside
  className="itKvVN">
  <section
    className="hZXMYD"
    name="sidebar-wrapper">
    <span
      collapse={false}>
      Child
    </span>
  </section>
</aside>
`;

exports[`<Sidebar /> renders correctly with collapsed option 1`] = `
<aside
  className="gJZgmQ">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with default options 1`] = `
<aside
  className="itKvVN">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with fixed and collapsed options 1`] = `
<aside
  className="frzhoO">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with fixed option 1`] = `
<aside
  className="lODyp">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini and collapsed options 1`] = `
<aside
  className="xdNdT">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini and fixed options 1`] = `
<aside
  className="lODyp">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini option 1`] = `
<aside
  className="itKvVN">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with mini, fixed, and collapsed options 1`] = `
<aside
  className="dyNUTN">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;

exports[`<Sidebar /> renders correctly with theme 1`] = `
<aside
  className="eMTNN">
  <section
    className="hZXMYD"
    name="sidebar-wrapper" />
</aside>
`;
